Name:           wx
Version:        0.13.2
License:        OtherLicense
License-file:   license.txt
Homepage:       http://haskell.org/haskellwiki/WxHaskell
Author:         Daan Leijen
Build-Type:     Simple
Category:       GUI, User interfaces
Cabal-Version:  >= 1.2
Description:    wxHaskell is a portable and native GUI library for Haskell.  
                It is built on top of wxWidgets - a comprehensive C++
                library that is portable across all major GUI platforms;
                including GTK, Windows, X11, and MacOS X.  This version
                works with wxWidgets 2.8 and 2.9.
Maintainer:     wxhaskell-devel@lists.sourceforge.net
Synopsis:       wxHaskell
Data-Files:     wx.cabal

Flag splitBase
    Description: Choose the new smaller, split-up base package.

Flag newBase
    Description: pick base >= 4

Library
    if flag(splitBase)
        build-depends: wxcore >= 0.13.1,
                       stm
        if flag(newBase)
            build-depends:
                base >= 4 && < 5
        else
            build-depends:
                base >= 3 && < 4
    else
        build-depends: base <  3, 
                       wxcore >= 0.12.1.6,
                       stm

 Exposed-Modules:
  Graphics.UI.WX.Draw
  Graphics.UI.WX.Media
  Graphics.UI.WX.TopLevelWindow
  Graphics.UI.WX.Attributes
  Graphics.UI.WX.Window
  Graphics.UI.WX.Variable
  Graphics.UI.WX.Events
  Graphics.UI.WX.Frame
  Graphics.UI.WX.Layout
  Graphics.UI.WX.Controls
  Graphics.UI.WX.Types
  Graphics.UI.WX.Dialogs
  Graphics.UI.WX.Classes
  Graphics.UI.WX.Timer
  Graphics.UI.WX.Menu
  Graphics.UI.WX
 Hs-Source-Dirs: src
