name:         wxc
version:      0.15
license:      OtherLicense
license-file: LICENSE
maintainer:   wxhaskell-devel@lists.sourceforge.net
category:     GUI, User interfaces
synopsis:     wxHaskell C++ wrapper
description:
  wxHaskell is a portable and native GUI library for Haskell. It is
  built on top of wxWidgets, a comprehensive C++ library that is
  portable across all major GUI platforms, including GTK, Windows,
  X11, and MacOS X. This version works with wxWidgets 2.8 only.

  Distributed under the WXWINDOWS LIBRARY LICENSE. Please see
  LICENSE file, but note that this is essentially LGPL with an
  exception allowing binary distribution of proprietary software.
  This is the same license as wxWidgets itself uses.

homepage:     http://haskell.org/haskellwiki/WxHaskell

cabal-version: >= 1.2
build-type:    Custom

extra-source-files:
    src/cpp/apppath.cpp
    src/cpp/dragimage.cpp
    src/cpp/eljaccelerator.cpp
    src/cpp/eljartprov.cpp
    src/cpp/eljbitmap.cpp
    src/cpp/eljbrush.cpp
    src/cpp/eljbusyinfo.cpp
    src/cpp/eljbutton.cpp
    src/cpp/eljcalendarctrl.cpp
    src/cpp/eljcaret.cpp
    src/cpp/eljcheckbox.cpp
    src/cpp/eljchecklistbox.cpp
    src/cpp/eljchoice.cpp
    src/cpp/eljclipboard.cpp
    src/cpp/eljcoldata.cpp
    src/cpp/eljcolour.cpp
    src/cpp/eljcolourdlg.cpp
    src/cpp/eljcombobox.cpp
    src/cpp/eljconfigbase.cpp
    src/cpp/eljcontrol.cpp
    src/cpp/eljctxhelp.cpp
    src/cpp/eljcursor.cpp
    src/cpp/eljdataformat.cpp
    src/cpp/eljdatetime.cpp
    src/cpp/eljdc.cpp
    src/cpp/eljdcsvg.cpp
    src/cpp/eljdialog.cpp
    src/cpp/eljdirdlg.cpp
    src/cpp/eljdnd.cpp
    src/cpp/eljdrawing.cpp
    src/cpp/eljevent.cpp
    src/cpp/eljfiledialog.cpp
    src/cpp/eljfilehist.cpp
    src/cpp/eljfindrepldlg.cpp
    src/cpp/eljfont.cpp
    src/cpp/eljfontdata.cpp
    src/cpp/eljfontdlg.cpp
    src/cpp/eljframe.cpp
    src/cpp/eljgauge.cpp
    src/cpp/eljgrid.cpp
    src/cpp/eljhelpcontroller.cpp
    src/cpp/eljicnbndl.cpp
    src/cpp/eljicon.cpp
    src/cpp/eljimage.cpp
    src/cpp/eljimagelist.cpp
    src/cpp/eljlayoutconstraints.cpp
    src/cpp/eljlistbox.cpp
    src/cpp/eljlistctrl.cpp
    src/cpp/eljlocale.cpp
    src/cpp/eljlog.cpp
    src/cpp/eljmask.cpp
    src/cpp/eljmdi.cpp
    src/cpp/eljmenu.cpp
    src/cpp/eljmenubar.cpp
    src/cpp/eljmessagedialog.cpp
    src/cpp/eljmime.cpp
    src/cpp/eljminiframe.cpp
    src/cpp/eljnotebook.cpp
    src/cpp/eljpalette.cpp
    src/cpp/eljpanel.cpp
    src/cpp/eljpen.cpp
    src/cpp/eljprintdlg.cpp
    src/cpp/eljprinting.cpp
    src/cpp/eljprocess.cpp
    src/cpp/eljradiobox.cpp
    src/cpp/eljradiobutton.cpp
    src/cpp/eljrc.cpp
    src/cpp/eljregion.cpp
    src/cpp/eljregioniter.cpp
    src/cpp/eljsash.cpp
    src/cpp/eljscrollbar.cpp
    src/cpp/eljscrolledwindow.cpp
    src/cpp/eljsingleinst.cpp
    src/cpp/eljsizer.cpp
    src/cpp/eljslider.cpp
    src/cpp/eljspinctrl.cpp
    src/cpp/eljsplitterwindow.cpp
    src/cpp/eljstaticbox.cpp
    src/cpp/eljstaticline.cpp
    src/cpp/eljstatictext.cpp
    src/cpp/eljstatusbar.cpp
    src/cpp/eljsystemsettings.cpp
    src/cpp/eljtextctrl.cpp
    src/cpp/eljtimer.cpp
    src/cpp/eljtipwnd.cpp
    src/cpp/eljtoolbar.cpp
    src/cpp/eljvalidator.cpp
    src/cpp/eljwindow.cpp
    src/cpp/eljwizard.cpp
    src/cpp/ewxw_main.cpp
    src/cpp/extra.cpp
    src/cpp/glcanvas.cpp
    src/cpp/graphicscontext.cpp
    src/cpp/image.cpp
    src/cpp/managed.cpp
    src/cpp/mediactrl.cpp
    src/cpp/previewframe.cpp
    src/cpp/printout.cpp
    src/cpp/sckaddr.cpp
    src/cpp/socket.cpp
    src/cpp/sound.cpp
    src/cpp/stc.cpp
    src/cpp/stc_gen.cpp
    src/cpp/std.cpp
    src/cpp/taskbaricon.cpp
    src/cpp/textstream.cpp
    src/cpp/treectrl.cpp
    src/cpp/wrapper.cpp


library

  include-dirs:
    src/include
  
  install-includes:
    dragimage.h
    eljgrid.h
    ewxw_def.h
    graphicscontext.h
    glcanvas.h
    managed.h
    mediactrl.h
    previewframe.h
    printout.h
    sound.h
    stc.h
    stc_gen.h
    textstream.h
    wrapper.h
    wxc.h
    wxc_glue.h
    wxc_types.h

  build-depends:
    base

  x-dll-sources:
    src/cpp/apppath.cpp
    src/cpp/dragimage.cpp
    src/cpp/eljaccelerator.cpp
    src/cpp/eljartprov.cpp
    src/cpp/eljbitmap.cpp
    src/cpp/eljbrush.cpp
    src/cpp/eljbusyinfo.cpp
    src/cpp/eljbutton.cpp
    src/cpp/eljcalendarctrl.cpp
    src/cpp/eljcaret.cpp
    src/cpp/eljcheckbox.cpp
    src/cpp/eljchecklistbox.cpp
    src/cpp/eljchoice.cpp
    src/cpp/eljclipboard.cpp
    src/cpp/eljcoldata.cpp
    src/cpp/eljcolour.cpp
    src/cpp/eljcolourdlg.cpp
    src/cpp/eljcombobox.cpp
    src/cpp/eljconfigbase.cpp
    src/cpp/eljcontrol.cpp
    src/cpp/eljctxhelp.cpp
    src/cpp/eljcursor.cpp
    src/cpp/eljdataformat.cpp
    src/cpp/eljdatetime.cpp
    src/cpp/eljdc.cpp
    src/cpp/eljdcsvg.cpp
    src/cpp/eljdialog.cpp
    src/cpp/eljdirdlg.cpp
    src/cpp/eljdnd.cpp
    src/cpp/eljdrawing.cpp
    src/cpp/eljevent.cpp
    src/cpp/eljfiledialog.cpp
    src/cpp/eljfilehist.cpp
    src/cpp/eljfindrepldlg.cpp
    src/cpp/eljfont.cpp
    src/cpp/eljfontdata.cpp
    src/cpp/eljfontdlg.cpp
    src/cpp/eljframe.cpp
    src/cpp/eljgauge.cpp
    src/cpp/eljgrid.cpp
    src/cpp/eljhelpcontroller.cpp
    src/cpp/eljicnbndl.cpp
    src/cpp/eljicon.cpp
    src/cpp/eljimage.cpp
    src/cpp/eljimagelist.cpp
    src/cpp/eljlayoutconstraints.cpp
    src/cpp/eljlistbox.cpp
    src/cpp/eljlistctrl.cpp
    src/cpp/eljlocale.cpp
    src/cpp/eljlog.cpp
    src/cpp/eljmask.cpp
    src/cpp/eljmdi.cpp
    src/cpp/eljmenu.cpp
    src/cpp/eljmenubar.cpp
    src/cpp/eljmessagedialog.cpp
    src/cpp/eljmime.cpp
    src/cpp/eljminiframe.cpp
    src/cpp/eljnotebook.cpp
    src/cpp/eljpalette.cpp
    src/cpp/eljpanel.cpp
    src/cpp/eljpen.cpp
    src/cpp/eljprintdlg.cpp
    src/cpp/eljprinting.cpp
    src/cpp/eljprocess.cpp
    src/cpp/eljradiobox.cpp
    src/cpp/eljradiobutton.cpp
    src/cpp/eljrc.cpp
    src/cpp/eljregion.cpp
    src/cpp/eljregioniter.cpp
    src/cpp/eljsash.cpp
    src/cpp/eljscrollbar.cpp
    src/cpp/eljscrolledwindow.cpp
    src/cpp/eljsingleinst.cpp
    src/cpp/eljsizer.cpp
    src/cpp/eljslider.cpp
    src/cpp/eljspinctrl.cpp
    src/cpp/eljsplitterwindow.cpp
    src/cpp/eljstaticbox.cpp
    src/cpp/eljstaticline.cpp
    src/cpp/eljstatictext.cpp
    src/cpp/eljstatusbar.cpp
    src/cpp/eljsystemsettings.cpp
    src/cpp/eljtextctrl.cpp
    src/cpp/eljtimer.cpp
    src/cpp/eljtipwnd.cpp
    src/cpp/eljtoolbar.cpp
    src/cpp/eljvalidator.cpp
    src/cpp/eljwindow.cpp
    src/cpp/eljwizard.cpp
    src/cpp/ewxw_main.cpp
    src/cpp/extra.cpp
    src/cpp/glcanvas.cpp
    src/cpp/graphicscontext.cpp
    src/cpp/image.cpp
    src/cpp/managed.cpp
    src/cpp/mediactrl.cpp
    src/cpp/previewframe.cpp
    src/cpp/printout.cpp
    src/cpp/sckaddr.cpp
    src/cpp/socket.cpp
    src/cpp/sound.cpp
    src/cpp/stc.cpp
    src/cpp/std.cpp
    src/cpp/taskbaricon.cpp
    src/cpp/textstream.cpp
    src/cpp/treectrl.cpp
    src/cpp/wrapper.cpp

  x-dll-name: wxc

  x-dll-extra-libraries:

