name:         wxcore
version:      0.15
license:      OtherLicense
license-file: LICENSE
author:       Daan Leijen
maintainer:   wxhaskell-devel@lists.sourceforge.net
category:     GUI, User interfaces
synopsis:     wxHaskell core
description:
  wxHaskell is a portable and native GUI library for Haskell. It is
  built on top of wxWidgets, a comprehensive C++ library that is
  portable across all major GUI platforms, including GTK, Windows,
  X11, and MacOS X. This version works with wxWidgets 2.8 only.

  Distributed under the WXWINDOWS LIBRARY LICENSE. Please see
  LICENSE file, but note that this is essentially LGPL with an
  exception allowing binary distribution of proprietary software.
  This is the same license as wxWidgets itself uses.
homepage:     http://haskell.org/haskellwiki/WxHaskell

cabal-version: >= 1.2
build-type:    Custom

extra-tmp-files:
  src/haskell/Graphics/UI/WXCore/WxcClassInfo.hs
  src/haskell/Graphics/UI/WXCore/WxcClassTypes.hs
  src/haskell/Graphics/UI/WXCore/WxcClasses.hs
  src/haskell/Graphics/UI/WXCore/WxcClassesAL.hs
  src/haskell/Graphics/UI/WXCore/WxcClassesMZ.hs

flag splitBase
  description:  use new split base
  default:      True

library
  hs-source-dirs:
    src/haskell

  exposed-modules:
    Graphics.UI.WXCore
    Graphics.UI.WXCore.Controls
    Graphics.UI.WXCore.Defines
    Graphics.UI.WXCore.Dialogs
    Graphics.UI.WXCore.DragAndDrop
    Graphics.UI.WXCore.Draw
    Graphics.UI.WXCore.Events
    Graphics.UI.WXCore.Frame
    Graphics.UI.WXCore.Image
    Graphics.UI.WXCore.Layout
    Graphics.UI.WXCore.OpenGL
    Graphics.UI.WXCore.Print
    Graphics.UI.WXCore.Process
    Graphics.UI.WXCore.Types
    Graphics.UI.WXCore.WxcClassInfo
    Graphics.UI.WXCore.WxcClassTypes
    Graphics.UI.WXCore.WxcClasses
    Graphics.UI.WXCore.WxcClassesAL
    Graphics.UI.WXCore.WxcClassesMZ
    Graphics.UI.WXCore.WxcDefs
    Graphics.UI.WXCore.WxcObject
    Graphics.UI.WXCore.WxcTypes

  build-depends:
    bytestring,
    filepath,
    parsec,
    stm,
    wxc,
    wxdirect > 0.12.1.2,
    directory,
    time

  if flag(splitBase)
    build-depends:
      array >= 0.2 && < 0.5,
      base >= 4 && < 5,
      containers >= 0.2 && < 0.5
  else
    build-depends:
      array >= 0.1 && < 0.3,
      base >= 3 && < 4,
      containers >= 0.1 && < 0.3
