Name:           wxdirect
Version:        0.11.1
License:        BSD3
Homepage:       http://haskell.org/haskellwiki/WxHaskell
Author:         Daan Leijen
Build-Type:     Simple
Description:    wxHaskell is a portable and native GUI library for Haskell.  It is built on top of wxWidgets - a comprehensive C++ library that is portable across all major GUI platforms; including GTK, Windows, X11, and MacOS X.  This version works with wxWidgets 2.8 only.
Maintainer:     wxhaskell-devel@lists.sourceforge.net
Cabal-Version:  >= 1.2
Category:       GUI, User interfaces
Synopsis:       helper tool for building wxHaskell

Flag splitBase
    Description: Choose the new smaller, split-up base package.

Executable      wxdirect
    if flag(splitBase)
        build-depends: base >= 3 && < 5,
                       containers >= 0.1 && < 0.3,
                       time   >= 1.0 && < 1.2,
                       parsec >= 2.1.0 && < 4
    else
        build-depends: base <  3,
                       time   >= 1.0.0 && < 1.1,
                       parsec >= 2.1 && < 4
    Main-is: Main.hs
    Hs-Source-Dirs: src
