name:         wxdirect
version:      0.13.1
license:      BSD3
license-file: LICENSE
author:       Daan Leijen
maintainer:   wxhaskell-devel@lists.sourceforge.net
category:     GUI, User interfaces
synopsis:     helper tool for building wxHaskell
description:
  wxHaskell is a portable and native GUI library for Haskell. It is built on
  top of wxWidgets, a comprehensive C++ library that is portable across all
  major GUI platforms, including GTK, Windows, X11, and MacOS X. This version
  works with wxWidgets 2.8 only.
homepage:     http://haskell.org/haskellwiki/WxHaskell

cabal-version: >= 1.2
build-type:    Simple

flag splitBase
    description:    use new split base
    default:        True

library
  hs-source-dirs:
    src

  if flag(splitBase)
    build-depends:
        base >= 4 && < 5
  else
    build-depends:
        base >= 3 && < 4

  exposed-modules:
    Application.Wxdirect

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

executable wxdirect
  main-is: Main.hs

  other-modules: Classes
               , CompileClasses
               , CompileClassInfo
               , CompileClassTypes
               , CompileDefs
               , CompileHeader
               , CompileSTC
               , DeriveTypes
               , HaskellNames
               , MultiSet
               , ParseC
               , ParseEiffel
               , Types

  hs-source-dirs:
    src

  build-depends:
    parsec     >= 2.1.0 && < 4,
    time       >= 1.0   && < 1.3,
    strict     >= 0.3   && < 1.0,
    directory  >= 1.0   && < 2.0

  if flag(splitBase)
    build-depends:
        base       >= 4     && < 5,
        containers >= 0.2   && < 0.5
  else
    build-depends:
        base       >= 3     && < 4,
        containers >= 0.1   && < 0.3

--  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
